--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1282,6 +1282,64 @@
                 "\n",
                 "grid_bnb.fit(X_train_vec, y_train)\n"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 115,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Best hyperparameters: {'fit_prior': True, 'alpha': np.float64(1.4156281407035176)}\n",
+                        "              precision    recall  f1-score   support\n",
+                        "\n",
+                        "           0       0.77      0.92      0.84       119\n",
+                        "           1       0.74      0.47      0.57        60\n",
+                        "\n",
+                        "    accuracy                           0.77       179\n",
+                        "   macro avg       0.75      0.69      0.70       179\n",
+                        "weighted avg       0.76      0.77      0.75       179\n",
+                        "\n",
+                        "Accuracy: 0.7653631284916201\n"
+                    ]
+                }
+            ],
+            "source": [
+                "import numpy as np\n",
+                "from sklearn.model_selection import RandomizedSearchCV\n",
+                "from sklearn.naive_bayes import MultinomialNB\n",
+                "from sklearn.metrics import accuracy_score, classification_report\n",
+                "\n",
+                "model = MultinomialNB()\n",
+                "\n",
+                "param_dist = {\n",
+                "    \"alpha\": np.linspace(0.01, 10.0, 200),\n",
+                "    \"fit_prior\": [True, False]\n",
+                "}\n",
+                "\n",
+                "random_search = RandomizedSearchCV(\n",
+                "    model,\n",
+                "    param_distributions=param_dist,\n",
+                "    n_iter=50,\n",
+                "    scoring=\"accuracy\",\n",
+                "    cv=5,\n",
+                "    random_state=42,\n",
+                "    n_jobs=-1\n",
+                ")\n",
+                "\n",
+                "random_search.fit(X_train_vec, y_train)\n",
+                "\n",
+                "print(\"Best hyperparameters:\", random_search.best_params_)\n",
+                "\n",
+                "best_model = random_search.best_estimator_\n",
+                "\n",
+                "y_pred = best_model.predict(X_test_vec)\n",
+                "\n",
+                "print(classification_report(y_test, y_pred))\n",
+                "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n"
+            ]
         }
     ],
     "metadata": {
